--- a/src/App.css
+++ b/src/App.css
@@ -20,5 +20,5 @@ body,
   line-height: 1.5;
   font-size: 1.15rem;
   font-family: "Inter", sans-serif;
-  background-color: #ffffff;
+  background-color: #f4f5f6;
 }
