--- a/src/Components/Login/login.css
+++ b/src/Components/Login/login.css
@@ -35,7 +35,7 @@ button {
   cursor: pointer;
   border: none;
   align-self: center;
-  margin-top: 1rem;
+  margin-top: 10px;
   font-size: 1rem;
   padding: 0.65rem;
   border-radius: 4px;
