--- a/src/Components/MoveMoney/moveMoney.css
+++ b/src/Components/MoveMoney/moveMoney.css
@@ -32,15 +32,50 @@
   display: flex;
   justify-content: center;
 }
-.home-page-width {
+.home-page-width1 {
   max-width: 720px;
-  flex: 1;
+  background-color: #fff;
 }
 .home-row {
   width: 100%;
   display: flex;
 }
-
+.input-payment {
+  box-shadow: 0px 3px 4px rgb(0 0 0 / 4%), 0px 3px 1px rgb(0 0 0 / 2%),
+    0px 1px 8px rgb(0 0 0 / 10%);
+  border-radius: 8px;
+  background-color: #ffffff;
+  padding-top: 22px;
+  border-radius: 8px;
+  padding-bottom: 15px;
+  outline: none;
+}
+.input-payment::placeholder {
+  font-size: 16px;
+}
+.p-1 {
+  padding: 4px;
+}
+.m-1 {
+  margin: 4px;
+}
+.around-between {
+  justify-content: space-between;
+}
+.full-width {
+  width: 100%;
+}
+.text-area-height {
+  height: 100px;
+}
+.full-width-parent {
+  width: 100%;
+  position: relative;
+}
+.form-padding {
+  width: 100%;
+  padding: 8px 24px 24px;
+}
 .home-btn {
   background-color: #fff;
   color: #000;
