--- a/src/Components/HistoryPayment/historyPayment.css
+++ b/src/Components/HistoryPayment/historyPayment.css
@@ -50,6 +50,12 @@
 .bg-date {
   background-color: #e4e6e8;
 }
+.text-content-history {
+  font-size: 0.75rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #101820;
+}
 .f-left {
   width: 100%;
   justify-content: start !important;
