--- a/src/Components/NavBar/navbar.css
+++ b/src/Components/NavBar/navbar.css
@@ -1,32 +1,45 @@
-.navbar-container{
-    display: flex;
-    padding: 1rem 1.5rem;
-    justify-content: flex-end;
-    background-color: rgb(228, 228, 228);
-    align-items: center;
+.navbar-container {
+  display: flex;
+  padding: 1rem 1.5rem;
+  justify-content: space-evenly;
+  background-color: rgb(228, 228, 228);
+  align-items: center;
 }
-.navbar-container > *{
-    margin: 0 1.25rem;
-    text-decoration: none;
-    font-weight: 600;
-    color:rgb(0, 99, 230);
+.navbar-container > * {
+  margin: 0 1.25rem;
+  text-decoration: none;
+  font-weight: 600;
+  color: rgb(0, 99, 230);
 }
-.navbar-home{
-    color:rgb(163, 162, 162);
+.navbar-home {
+  text-decoration: none;
+  color: rgb(163, 162, 162);
+  padding: 0.35rem;
 }
 .navbar-login {
-    color:rgb(163, 162, 162);
+  text-decoration: none;
+  color: rgb(163, 162, 162);
+  padding: 0.35rem;
 }
-.navbar-register{
-    color:rgb(255, 255, 255);
-    background-color: rgb(150, 150, 150);
-    padding:0.35rem;
-    border-radius: 6px;
+.navbar-register {
+  text-decoration: none;
+  margin-left: 26px;
+  color: rgb(255, 255, 255);
+  background-color: rgb(150, 150, 150);
+  padding: 0.35rem;
+  border-radius: 6px;
 }
-.navbar-user{
-    color: rgb(0, 154, 165);
+.navbar-user {
+  color: rgb(0, 154, 165);
+  padding: 0.35rem;
+  text-decoration: none;
 }
 .navbar-logout {
-    color:rgb(156, 156, 156);
-    padding:0.35rem;
+  text-decoration: none;
+  color: rgb(156, 156, 156);
+  padding: 0.35rem;
+}
+.font-big {
+  padding: 0.35rem;
+  font-size: 30px;
 }
